Add index of notebooks to the README and add directory to hold figures saved from notebooks.

--- a/partnering_cell_types.ipynb
+++ b/partnering_cell_types.ipynb
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "9a02a1b0",
    "metadata": {},
    "outputs": [
@@ -1244,7 +1244,7 @@
     "plt.ylabel(\"Number of neurons\")\n",
     "plt.title(\"Distribution of partner-type diversity per neuron\")\n",
     "plt.tight_layout()  # leave space on right for legend\n",
-    "plt.savefig(\"partner_cell_distrib.png\")\n"
+    "plt.savefig(\"figures/partner_cell_distrib.png\")\n"
    ]
   }
  ],
