Update reciprocity analysis to include tabular summary of top reciprocal partners.

--- a/reciprocity_analysis.ipynb
+++ b/reciprocity_analysis.ipynb
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "ba9f9029",
    "metadata": {},
    "outputs": [
@@ -921,10 +921,449 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Summary of Top Reciprocal Partners ===\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Target neuron",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Target ID",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Top reciprocal cell type",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Input weight (to target)",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Output weight (from target)",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Reciprocity score",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "564e16da-70b8-4e19-b0fb-2d3ce8d38aec",
+       "rows": [
+        [
+         "0",
+         "oviEN Left",
+         "720575940612490958",
+         "oviIN",
+         "189",
+         "121",
+         "151.22"
+        ],
+        [
+         "1",
+         "oviEN Right",
+         "720575940635515744",
+         "oviIN",
+         "240",
+         "172",
+         "203.17"
+        ],
+        [
+         "2",
+         "oviIN Left",
+         "720575940628360506",
+         "SMP550",
+         "117",
+         "221",
+         "160.8"
+        ],
+        [
+         "3",
+         "oviIN Right",
+         "720575940625741287",
+         "SMP550",
+         "176",
+         "208",
+         "191.33"
+        ],
+        [
+         "4",
+         "PAL02 Left",
+         "720575940628717585",
+         "SMP550",
+         "106",
+         "27",
+         "53.5"
+        ],
+        [
+         "5",
+         "PAL02 Right",
+         "720575940620716897",
+         "SMP550",
+         "97",
+         "41",
+         "63.06"
+        ],
+        [
+         "6",
+         "PAL04 Left",
+         "720575940632369439",
+         "SLPpm3_P04",
+         "38",
+         "61",
+         "48.15"
+        ],
+        [
+         "7",
+         "PAL04 Right",
+         "720575940636990064",
+         "SLPpm3_P04",
+         "52",
+         "67",
+         "59.03"
+        ],
+        [
+         "8",
+         "Earmuff Left 1",
+         "720575940629861163",
+         "SLP285",
+         "71",
+         "80",
+         "75.37"
+        ],
+        [
+         "9",
+         "Earmuff Right 1",
+         "720575940611411057",
+         "AVLP315",
+         "139",
+         "139",
+         "139.0"
+        ],
+        [
+         "10",
+         "Earmuff Left 2",
+         "720575940635642725",
+         "AVLP315",
+         "136",
+         "106",
+         "120.07"
+        ],
+        [
+         "11",
+         "Earmuff Right 2",
+         "720575940629013199",
+         "SLP285",
+         "97",
+         "73",
+         "84.15"
+        ],
+        [
+         "12",
+         "Tophat Left 1",
+         "720575940660281217",
+         "CB1032",
+         "25",
+         "146",
+         "60.42"
+        ],
+        [
+         "13",
+         "Tophat Right 1",
+         "720575940620441024",
+         "AN_multi_112",
+         "146",
+         "18",
+         "51.26"
+        ],
+        [
+         "14",
+         "Tophat Left 2",
+         "720575940622541005",
+         "SLP056",
+         "13",
+         "320",
+         "64.5"
+        ],
+        [
+         "15",
+         "Tophat Right 2",
+         "720575940638865011",
+         "CB1032",
+         "25",
+         "155",
+         "62.25"
+        ],
+        [
+         "16",
+         "SMP544",
+         "720575940633705636",
+         "VES041",
+         "89",
+         "338",
+         "173.44"
+        ]
+       ],
+       "shape": {
+        "columns": 6,
+        "rows": 17
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Target neuron</th>\n",
+       "      <th>Target ID</th>\n",
+       "      <th>Top reciprocal cell type</th>\n",
+       "      <th>Input weight (to target)</th>\n",
+       "      <th>Output weight (from target)</th>\n",
+       "      <th>Reciprocity score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>oviEN Left</td>\n",
+       "      <td>720575940612490958</td>\n",
+       "      <td>oviIN</td>\n",
+       "      <td>189</td>\n",
+       "      <td>121</td>\n",
+       "      <td>151.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>oviEN Right</td>\n",
+       "      <td>720575940635515744</td>\n",
+       "      <td>oviIN</td>\n",
+       "      <td>240</td>\n",
+       "      <td>172</td>\n",
+       "      <td>203.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>oviIN Left</td>\n",
+       "      <td>720575940628360506</td>\n",
+       "      <td>SMP550</td>\n",
+       "      <td>117</td>\n",
+       "      <td>221</td>\n",
+       "      <td>160.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>oviIN Right</td>\n",
+       "      <td>720575940625741287</td>\n",
+       "      <td>SMP550</td>\n",
+       "      <td>176</td>\n",
+       "      <td>208</td>\n",
+       "      <td>191.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PAL02 Left</td>\n",
+       "      <td>720575940628717585</td>\n",
+       "      <td>SMP550</td>\n",
+       "      <td>106</td>\n",
+       "      <td>27</td>\n",
+       "      <td>53.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>PAL02 Right</td>\n",
+       "      <td>720575940620716897</td>\n",
+       "      <td>SMP550</td>\n",
+       "      <td>97</td>\n",
+       "      <td>41</td>\n",
+       "      <td>63.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>PAL04 Left</td>\n",
+       "      <td>720575940632369439</td>\n",
+       "      <td>SLPpm3_P04</td>\n",
+       "      <td>38</td>\n",
+       "      <td>61</td>\n",
+       "      <td>48.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>PAL04 Right</td>\n",
+       "      <td>720575940636990064</td>\n",
+       "      <td>SLPpm3_P04</td>\n",
+       "      <td>52</td>\n",
+       "      <td>67</td>\n",
+       "      <td>59.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Earmuff Left 1</td>\n",
+       "      <td>720575940629861163</td>\n",
+       "      <td>SLP285</td>\n",
+       "      <td>71</td>\n",
+       "      <td>80</td>\n",
+       "      <td>75.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Earmuff Right 1</td>\n",
+       "      <td>720575940611411057</td>\n",
+       "      <td>AVLP315</td>\n",
+       "      <td>139</td>\n",
+       "      <td>139</td>\n",
+       "      <td>139.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Earmuff Left 2</td>\n",
+       "      <td>720575940635642725</td>\n",
+       "      <td>AVLP315</td>\n",
+       "      <td>136</td>\n",
+       "      <td>106</td>\n",
+       "      <td>120.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Earmuff Right 2</td>\n",
+       "      <td>720575940629013199</td>\n",
+       "      <td>SLP285</td>\n",
+       "      <td>97</td>\n",
+       "      <td>73</td>\n",
+       "      <td>84.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Tophat Left 1</td>\n",
+       "      <td>720575940660281217</td>\n",
+       "      <td>CB1032</td>\n",
+       "      <td>25</td>\n",
+       "      <td>146</td>\n",
+       "      <td>60.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Tophat Right 1</td>\n",
+       "      <td>720575940620441024</td>\n",
+       "      <td>AN_multi_112</td>\n",
+       "      <td>146</td>\n",
+       "      <td>18</td>\n",
+       "      <td>51.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Tophat Left 2</td>\n",
+       "      <td>720575940622541005</td>\n",
+       "      <td>SLP056</td>\n",
+       "      <td>13</td>\n",
+       "      <td>320</td>\n",
+       "      <td>64.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Tophat Right 2</td>\n",
+       "      <td>720575940638865011</td>\n",
+       "      <td>CB1032</td>\n",
+       "      <td>25</td>\n",
+       "      <td>155</td>\n",
+       "      <td>62.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>SMP544</td>\n",
+       "      <td>720575940633705636</td>\n",
+       "      <td>VES041</td>\n",
+       "      <td>89</td>\n",
+       "      <td>338</td>\n",
+       "      <td>173.44</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Target neuron           Target ID Top reciprocal cell type  \\\n",
+       "0        oviEN Left  720575940612490958                    oviIN   \n",
+       "1       oviEN Right  720575940635515744                    oviIN   \n",
+       "2        oviIN Left  720575940628360506                   SMP550   \n",
+       "3       oviIN Right  720575940625741287                   SMP550   \n",
+       "4        PAL02 Left  720575940628717585                   SMP550   \n",
+       "5       PAL02 Right  720575940620716897                   SMP550   \n",
+       "6        PAL04 Left  720575940632369439               SLPpm3_P04   \n",
+       "7       PAL04 Right  720575940636990064               SLPpm3_P04   \n",
+       "8    Earmuff Left 1  720575940629861163                   SLP285   \n",
+       "9   Earmuff Right 1  720575940611411057                  AVLP315   \n",
+       "10   Earmuff Left 2  720575940635642725                  AVLP315   \n",
+       "11  Earmuff Right 2  720575940629013199                   SLP285   \n",
+       "12    Tophat Left 1  720575940660281217                   CB1032   \n",
+       "13   Tophat Right 1  720575940620441024             AN_multi_112   \n",
+       "14    Tophat Left 2  720575940622541005                   SLP056   \n",
+       "15   Tophat Right 2  720575940638865011                   CB1032   \n",
+       "16           SMP544  720575940633705636                   VES041   \n",
+       "\n",
+       "    Input weight (to target)  Output weight (from target)  Reciprocity score  \n",
+       "0                        189                          121             151.22  \n",
+       "1                        240                          172             203.17  \n",
+       "2                        117                          221             160.80  \n",
+       "3                        176                          208             191.33  \n",
+       "4                        106                           27              53.50  \n",
+       "5                         97                           41              63.06  \n",
+       "6                         38                           61              48.15  \n",
+       "7                         52                           67              59.03  \n",
+       "8                         71                           80              75.37  \n",
+       "9                        139                          139             139.00  \n",
+       "10                       136                          106             120.07  \n",
+       "11                        97                           73              84.15  \n",
+       "12                        25                          146              60.42  \n",
+       "13                       146                           18              51.26  \n",
+       "14                        13                          320              64.50  \n",
+       "15                        25                          155              62.25  \n",
+       "16                        89                          338             173.44  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# --- Run reciprocity analysis for all neurons of interest ---\n",
+    "\n",
+    "results_summary = []  # collect summaries for display at the end\n",
     "\n",
     "for group_name, neuron_dict in neurons_of_interest.items():\n",
     "    print(f\"\\n=== Processing group: {group_name} ===\")\n",
@@ -942,6 +1381,20 @@
     "            .sort_values(\"out_w\", ascending=False, ignore_index=True)\n",
     "        )\n",
     "\n",
+    "        # Compute reciprocity measure (geometric mean of in/out)\n",
+    "        df_pairs[\"reciprocity_score\"] = np.sqrt(df_pairs[\"in_w\"] * df_pairs[\"out_w\"])\n",
+    "\n",
+    "        # Identify most reciprocal partner cell type\n",
+    "        top_partner = df_pairs.loc[df_pairs[\"reciprocity_score\"].idxmax()]\n",
+    "\n",
+    "        results_summary.append({\n",
+    "            \"Target neuron\": target_label,\n",
+    "            \"Target ID\": target_id,\n",
+    "            \"Top reciprocal cell type\": top_partner[\"partner_type\"],\n",
+    "            \"Input weight (to target)\": int(top_partner[\"in_w\"]),\n",
+    "            \"Output weight (from target)\": int(top_partner[\"out_w\"]),\n",
+    "            \"Reciprocity score\": round(top_partner[\"reciprocity_score\"], 2)\n",
+    "        })\n",
     "\n",
     "        # Generate and save reciprocity plot\n",
     "        plot_reciprocity(\n",
@@ -951,7 +1404,12 @@
     "            wmin=1,\n",
     "            angle_deg=20,\n",
     "            annotate_top=12\n",
-    "        )\n"
+    "        )\n",
+    "\n",
+    "# --- Display summary for all analyzed neurons ---\n",
+    "summary_df = pd.DataFrame(results_summary)\n",
+    "print(\"\\n=== Summary of Top Reciprocal Partners ===\")\n",
+    "display(summary_df)\n"
    ]
   }
  ],
