Add debug feature to sensory input analysis (output selection of individual upstream neurons)

--- a/sensory_input_pal02_pal04.ipynb
+++ b/sensory_input_pal02_pal04.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "49f21245",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "e0df8359",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "9fd2da72",
    "metadata": {},
    "outputs": [],
@@ -160,35 +160,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c782a67d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Modality propagation to a target\n",
-    "def modality_scores_to_target(target_id, max_hops=2, alpha=0.5, combine=\"sum\"):\n",
+    "def modality_scores_to_target(\n",
+    "    target_id, max_hops=2, alpha=0.5, combine=\"sum\", debug=False\n",
+    "):\n",
     "    \"\"\"\n",
     "    Compute static, hop-limited sensory modality scores arriving at target_id.\n",
     "      - max_hops: 1 (direct seeds) or 2 (seeds → intermediates → target)\n",
-    "      - alpha: attenuation per hop (0<alpha<=1)\n",
+    "      - alpha: attenuation per hop (0 < alpha <= 1)\n",
     "      - combine: 'sum' (sum of path contributions) or 'max' (take strongest path per seed)\n",
+    "      - debug: if True, print up to 3 examples per modality per hop\n",
     "    Returns dict: {modality: score}\n",
     "    \"\"\"\n",
     "    scores = defaultdict(float)\n",
+    "    debug_lim = 3 if debug else 0\n",
     "\n",
     "    # 1-hop: seed -> target\n",
+    "    debug_counts_1hop = defaultdict(int)\n",
     "    for pre, w1 in in_adj[target_id].items():\n",
     "        if pre in seed_id_to_modality:\n",
     "            m = seed_id_to_modality[pre]\n",
     "            scores[m] += (alpha**1) * w1\n",
     "\n",
+    "            if debug and debug_counts_1hop[m] < debug_lim:\n",
+    "                print(f\"[1-hop → {target_id}] modality={m}, pre={pre}, weight={w1}\")\n",
+    "                debug_counts_1hop[m] += 1\n",
+    "\n",
+    "    # 2-hop: seed -> mid -> target\n",
     "    if max_hops >= 2:\n",
-    "        # 2-hop: seed -> mid -> target\n",
+    "        debug_counts_2hop = defaultdict(int)\n",
     "        for mid, w2 in in_adj[target_id].items():\n",
     "            for seed, w1 in in_adj[mid].items():\n",
     "                if seed in seed_id_to_modality:\n",
-    "                    contrib = (alpha**2) * np.sqrt(w1 * w2)  # geometric mean path strength\n",
     "                    m = seed_id_to_modality[seed]\n",
+    "                    contrib = (alpha**2) * np.sqrt(\n",
+    "                        w1 * w2\n",
+    "                    )  # geometric mean path strength\n",
+    "\n",
+    "                    if debug and debug_counts_2hop[m] < debug_lim:\n",
+    "                        print(\n",
+    "                            f\"[2-hop → {target_id}] modality={m}, \"\n",
+    "                            f\"seed={seed}, mid={mid}, weights=({w1:.3f}, {w2:.3f}), contrib={contrib:.3f}\"\n",
+    "                        )\n",
+    "                        debug_counts_2hop[m] += 1\n",
+    "\n",
     "                    if combine == \"max\":\n",
     "                        scores[m] = max(scores[m], contrib)\n",
     "                    else:\n",
@@ -196,16 +216,17 @@
     "\n",
     "    return dict(scores)\n",
     "\n",
+    "\n",
     "def normalize_scores(d):\n",
     "    s = sum(d.values())\n",
     "    if s == 0:\n",
-    "        return {k:0.0 for k in d}\n",
-    "    return {k: v/s for k,v in d.items()}\n"
+    "        return {k: 0.0 for k in d}\n",
+    "    return {k: v / s for k, v in d.items()}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "152d04fc",
    "metadata": {},
    "outputs": [
@@ -239,7 +260,7 @@
          "type": "float"
         }
        ],
-       "ref": "54a05b09-5e0d-4a92-b81c-49fbccf7dacb",
+       "ref": "bf6b895c-caca-46ed-8501-7ebc23b2346c",
        "rows": [
         [
          "5",
@@ -371,7 +392,7 @@
        "0       gustatory    0.007309    0.063054                -0.055745"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "d621a4c1",
    "metadata": {},
    "outputs": [
